nav animation pulida xd

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ body{
 	width: 100%;
 	position: fixed;
 	top: 0;
+	display: flex;
 	
 	animation: sticky-parallax-header-move-and-size linear forwards;
 	animation-timeline: scroll();
@@ -39,10 +40,15 @@ body{
 	background-size: cover;
 	background-position: 50% 0;
 	background-blend-mode: soft-light;
+	z-index: 100;
 }	
 @media screen and (min-width: 500px) {
 	#sticky-parallax-header {
 		background-image: url("/src/assets/imagePrueba.jpg");
+		justify-content: center;
+	}
+	.header-logo{
+		margin-right: 5.5rem;
 	}
 }
 /* *** HEADER *** */
@@ -63,7 +69,6 @@ body{
 .header-logo{
 	width:  4.3rem;
 	height: 2rem;
-	margin-right: 5.5rem;
 }
 .header-nav-list{
 	display: flex;
