--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body{
 }
 @keyframes sticky-parallax-header-move-and-size {
 	from {
+		background-color: #572170bd; /*para que no te flashee la cara*/
 		background-position: 50% 0;
 		height: 100vh;
 		font-size: calc(4vw + 1em);
@@ -60,7 +61,7 @@ body{
 	position: sticky;
 	top: 0;
 	background-color: #78fa0301;
-	backdrop-filter: blur(5px);
+	/* filter: brightness(70%); */
 	justify-self: center;
 }
 .header-nav{
@@ -192,11 +193,13 @@ body{
 	width: 4rem;
 	border-radius: .7rem;
 	background-color: #fff0;
+	z-index: 20;
 }
 .whatsapp-img{
 	background-color: #fff0;
 	border-radius: .7rem;
 	width: 100%;
+	z-index: 20;
 }
 
 /* *** CUSTOM SECTION *** */
@@ -221,8 +224,6 @@ body{
 	grid-template-columns: repeat(3, 1fr);
 	grid-auto-rows: 5rem;
 	gap: 1rem;
-
-	
 }
 
 .custom-product-title{
@@ -311,3 +312,11 @@ body{
 	box-shadow: 0 0 .5rem var(--green-color);
 }
 /* *** FOOTER *** */
+.footer{
+	position: sticky;
+	background-color: var(--body-bg-color-black);
+	color: var(--white-color);
+	text-align: center;
+	padding: 4rem 1rem;
+	z-index: 30;
+}
