--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 :root{
-	--green-color : #78fa03;
-	--body-bg-color-black : #020702;
-	--body-bg-color-green : #142814;
+	--green-color : #76fa03;
+	--green-color-50 : #76fa0377;
+	--body-bg-color-black : #262924;
+	--body-bg-color-green : #242c24;
 	--violet-color: #9647c2;
 	--white-color: #f1fff0;
 	--gray-green-color: #415341;
+	--gray-color: #171a14;
 }
 
 
@@ -14,16 +16,25 @@ body{
 }
 @keyframes sticky-parallax-header-move-and-size {
 	from {
-		background-color: #572170bd; /*para que no te flashee la cara*/
+		background-color: #222222aa;
 		background-position: 50% 0;
 		height: 100vh;
 		font-size: calc(4vw + 1em);
 	}
 	to {
-		background-color: #222;
+		background-color: #181818; 
 		background-position: 50% 70%;
 		height: 10vh;
 		font-size: 1em;
+		
+	}
+}
+@keyframes header-logo-size {
+	from{
+		width: 100%;
+	}
+	to{
+		width: 20%;
 	}
 }
 
@@ -37,7 +48,7 @@ body{
 	animation-timeline: scroll();
 	animation-range: 0vh 85vh;
 	
-	background-image: url("/src/assets/imgen5.jpg");
+	background-image: url("/src/assets/mariabecerrajuana.webp");
 	background-size: cover;
 	background-position: 50% 0;
 	background-blend-mode: soft-light;
@@ -45,7 +56,7 @@ body{
 }	
 @media screen and (min-width: 500px) {
 	#sticky-parallax-header {
-		background-image: url("/src/assets/imagePrueba.jpg");
+		background-image: url("/src/assets/mariabecerrajuana.webp");
 		justify-content: center;
 	}
 	.header-logo{
@@ -63,23 +74,47 @@ body{
 	background-color: #78fa0301;
 	/* filter: brightness(70%); */
 	justify-self: center;
+	font-family:  'Trebuchet MS', sans-serif;
 }
 .header-nav{
 	margin-right: .8rem;
 }
-.header-logo{
-	width:  4.3rem;
-	height: 2rem;
+
+.header-logo-container{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: .8rem;
+	width: minmax(100px, 200px);
+	max-width: 110px;
+
+	animation: header-logo-size linear forwards;
+	animation-timeline: scroll();
+	animation-range: 0vh 85vh;
 }
+.header-logo{
+	width:  100%;
+	aspect-ratio: 	2/1;
+	filter: drop-shadow(0 0 20px #000);
+}
+
 .header-nav-list{
 	display: flex;
 	flex-direction: row;
 	gap: 1rem;
+	border-radius: 10px;
+	filter: drop-shadow(0 0 20px #000);
+}
+.header-nav-list-item-container{
+	font-size: clamp(.8em, 3vw, 2.5em);
+	text-decoration: none;
+	color: #eee;
 }
 .header-nav-list-item{
 	list-style: none;
 	padding: 7px;
 	cursor: pointer;
+	text-decoration: none;
 }
 .header-nav-list-item:hover{
 	text-decoration: underline var(--violet-color);
@@ -90,13 +125,16 @@ body{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+
+	width: fit-content;
+	justify-self: center;
 }
 .main-title{
 	text-align: center;
 	color: var(--white-color);
-	font-size: 1.85rem;
 	margin-top: 2rem;
 	margin-bottom: 1.5rem;
+	font: 2rem "Compare"; 
 }
 
 /* *** PACKS (generales) *** */
@@ -104,10 +142,10 @@ body{
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
-	margin: 0 1rem;
 	width: 100%;
 	max-width: 900px;
 	align-items: center;
+	
 }
 @media screen and (min-width: 800px) {
 	.kits{
@@ -118,21 +156,22 @@ body{
 		padding: 3rem 0;
 		gap: 1.5rem;
 	}
+	.header-nav-list{
+		gap: 3rem;
+		margin-left: 3rem;
+	}
 }
 .kits-kit{
+	background-color: #fff0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	border: .15rem solid var(--white-color);
 	border-radius: .65rem;
 	color: var(--white-color);
-
 	width: clamp(290px, 92%, 450px);
-	
-
 }
 .kits-kit-title{
-	font: 1.2rem sans-serif; 
+	font: 1.2rem ; 
 }
 .kits-item-list{
 	display: flex;
@@ -145,55 +184,66 @@ body{
 }
 .kits-buy-button{
 	background-color: #fff0;
-	border: .3rem solid var(--white-color);
 	border-radius: .3rem;
-	border-bottom-right-radius: 0 ;
-	border-bottom-left-radius: 0 ;
 	color: var(--white-color);
-	font-weight: 900;
+	font-weight: 700;
 	font-size: 1.2rem;
+	outline: none;
+	border: none;
+	padding: .4rem .8rem;
 }
 @media screen and (max-width: 800px) {
 	.kits-buy-button{
-		border-bottom: none;
+		border-bottom-right-radius: 0 ;
+		border-bottom-left-radius: 0 ;
 	}
 }
 /* *** PACKS (especificos) *** */
 .kit-1{
-	box-shadow: 0 0 .5rem var(--white-color);
+	box-shadow: 0 0 .4rem var(--white-color);
 }
+.kits-buy-button-1{
+	background-color: #fff5;
+}
+
+
 .kit-2{
-	border: .23rem solid var(--green-color);
 	border-radius: .65rem;
 	color: var(--green-color);
-	box-shadow: 0 0 .5rem var(--green-color);
+	box-shadow: 0 0 .7rem var(--green-color);
 }
 .kits-kit-title-2{
 	font-weight: 900;
 }
 .kits-buy-button-2{
-	border-color: var(--green-color);
 	box-shadow: 0 0 .2rem var(--green-color);
+	background-color: var(--green-color-50);
+	padding: .3rem 1.2rem;
 }
 
-.kits-buy-button-3{
-	border-color: var(--violet-color);
-}
+
 .kit-3{
-	border: .2rem solid var(--violet-color);
 	border-radius: .65rem;
 	color: var(--violet-color);
-	box-shadow: 0 0 .4rem var(--violet-color);
+	box-shadow: 0 0 .65rem var(--violet-color);
+}
+.kits-buy-button-3{
+	background-color: #9657c277;
 }
 /* *** WHATSAPP BUTTON *** */
 .whatsapp{
-	position: fixed;
-	bottom: 1rem;
-	right: 1rem;
+	position: sticky;
+	bottom: .5rem;
+	left: 100%;
 	width: 4rem;
+	margin-bottom: 1rem;
 	border-radius: .7rem;
-	background-color: #fff0;
+	background: linear-gradient(#42e762, #1cc93f);
 	z-index: 20;
+
+	animation: expand linear forwards;
+	animation-timeline: scroll();
+	animation-range: 87% 95%;
 }
 .whatsapp-img{
 	background-color: #fff0;
@@ -201,7 +251,18 @@ body{
 	width: 100%;
 	z-index: 20;
 }
-
+@keyframes expand {
+	to{
+		left: 0;
+		padding: 0 40%;
+		transform: translate(0);
+	}
+}
+@media screen and (min-width: 700px) {
+	.whatsapp{
+		transform: translateX(5rem);
+	}
+}
 /* *** CUSTOM SECTION *** */
 .custom{
 	width: 100%;
@@ -209,21 +270,13 @@ body{
 	padding-top: 2rem;
 }
 .custom-title{
-	font-size: 1.85rem;
+	font: 2.2rem "Compare"; 
 	text-wrap: balance;
 	margin-top: 3rem;
 
 	justify-self: center;
 	text-align: center;
 	max-width: 800px
-}
-
-.custom-products{
-	margin: 1.5rem .7rem;
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-auto-rows: 5rem;
-	gap: 1rem;
 }
 
 .custom-product-title{
@@ -237,38 +290,78 @@ body{
 	margin-top: 2.3rem;
 	border-bottom: 2px solid var(--violet-color);
 }
+.custom-products{
+	margin: 1.5rem .7rem;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-auto-rows: 1fr;
+	gap: .7rem;
+} 
+@media screen and (max-width: 538px) {
+	.custom-products{
+		grid-template-columns: repeat(2, minmax(100px, 1fr));
+	}
+	.custom-product-button{
+		flex-direction: column;
+	}
+}
 
+.custom-img{
+	width: 4rem;
+	aspect-ratio: 1/1;
+	border-radius: 50%;
+}
 .custom-product-button{
 	color: var(--white-color);
 	text-decoration: none;
 	outline: none;
 
-	border-radius: .7rem;
+	border-radius: .3rem;
 	background-color: #fff0;
 
 	text-align: center;
 	align-content: center;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1rem;
+
+	background-color: var(--gray-color); 
+	border: 1px solid var(--white-color);
+	box-sizing: border-box;
+
+	transition: box-shadow .4s ease-in-out;
 }
-.iluminacion{
-	border: 1px solid var(--violet-color);
-	box-shadow: 0 0 .5rem var(--violet-color);
-}
-.carp{
-	border: 1px solid var(--violet-color);
-	box-shadow: 0 0 .5rem var(--violet-color);
-}
+
+/* *** CLICKED PRODUCT *** */
+/* .clicked-product{ 
+	scale: 3;
+} */
+/*############# */
 
 /* *** CUSTOM product selected *** */
-.clicked{
+.clicked-container{
 	position: fixed;
-	top:  30%;
-	left: 0;
+	top:  50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	
+	width: 100vw;
+	height: 100vh;
+	
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.clicked{
 
 	background-color: #fff0;
-	width: 100vw;
+	width: clamp(290px, 92%, 450px);
 
 	z-index: 20 ;
 	text-align: center;
+
 }
 .clicked::before{
 	content: "";
@@ -283,28 +376,33 @@ body{
 	
 	z-index: -1;
 }
+.clicked-img{
+	width:  70%;
+	border-radius: 10px;
+}
 .clicked-product{
 	text-align: center;
-	
 }
 .clicked-price{
 	text-align: center;
+	font-size: 1.3rem;
 }
 .clicked-buy-button{
 	background-color: #fff0;
-	border: .3rem solid var(--green-color);
+	border: none;
 	border-radius: .3rem;
-	border-bottom-right-radius: 0 ;
-	border-bottom-left-radius: 0 ;
 	color: var(--white-color);
-	font-weight: 900;
-	font-size: 1.2rem;
+	font-weight: 700;
+	font-size: 1.5rem;
+	padding: .5rem 1rem;
+	background-color: var(--green-color-50);
 }
 .clicked-aclaration{
 	margin-top: 5rem;
 	font-size: .8rem;
 	color: #fff3;
 	font-style: italic;
+	z-index: 60;
 }
 .clicked-selected-product{
 	color: var(--green-color);
@@ -313,10 +411,8 @@ body{
 }
 /* *** FOOTER *** */
 .footer{
-	position: sticky;
-	background-color: var(--body-bg-color-black);
+	background-color: #0f110d;
 	color: var(--white-color);
 	text-align: center;
 	padding: 4rem 1rem;
-	z-index: 30;
 }
