--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@font-face {
+  font-family: 'Compare';
+  src: url('/src/assets/fonts/Compare.otf');
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'FUENTEGOD', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -20,4 +25,9 @@
 }
 html{
 	background: linear-gradient(var(--body-bg-color-black), var(--body-bg-color-green));
+  scroll-behavior: smooth;
+}
+button, a{
+  user-select: none;
+  cursor: pointer;
 }
