--- a/src/App.css
+++ b/src/App.css
@@ -420,26 +420,27 @@ body{
 
 @supports (-webkit-overflow-scrolling: touch){
 	@media only screen and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) {
-		#sticky-parallax-header {
-			animation: sticky-parallax-header-move-and-size linear forwards !important;
-			animation-timeline: scroll() ;
-			animation-range: 0vh 85vh !important;
-		}
-		body{	
-			background-color: #0ab1cf8c;
-		}
 		@media (prefers-reduced-motion: no-preference) {
-			#sticky-parallax-header {
-				animation: sticky-parallax-header-move-and-size linear forwards !important;
-				animation-timeline: scroll() ;
-				animation-range: 0vh 85vh !important;
+			body{	
+				background-color: #cf0a0a8c;
 			}
 		}
+		body{	
+			background-color: #bbcf0a8c;
+		}
 	}
-	#sticky-parallax-header {
-		animation: sticky-parallax-header-move-and-size linear forwards !important;
-		animation-timeline: scroll() ;
-		animation-range: 0vh 85vh !important;
+	@media only screen and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) {
+		body{	
+			background-color: #2bcf0a8c;
+		}
+	}
+	@media (prefers-reduced-motion: no-preference) {
+		body{	
+			background-color: #0a2ecf8c;
+		}
+	}
+	body{	
+		background-color: #c80acf8c;
 	}
 }
 @media (prefers-reduced-motion: reduce) {
@@ -462,3 +463,9 @@ body{
 		animation: none;
 	}
 }
+
+/*
+git add .
+git commit -m "v1"
+git push
+*/
