--- a/src/index.css
+++ b/src/index.css
@@ -26,10 +26,7 @@
 html{
   background: linear-gradient(var(--body-bg-color-black), var(--body-bg-color-green));
   scroll-behavior: smooth;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  margin-inline: auto;
 }
 button, a{
   user-select: none;
